@@ -3,6 +3,7 @@ Changelog for hydra
 
 
 Release 8.7-dev
+* added -w timeout support to ssh module
 * fixed various memory leaks in http-form module
 * corrected hydra return code to be 0 on success
 * added patch from debian maintainers which fixes spellings
